git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@70 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -1,5 +1,5 @@
 justnifferpythoncodedir = $(PYTHONCODEDIR)
-justnifferpythoncode_DATA = http_parser.py
+justnifferpythoncode_DATA = http_parser.py common.py
 
 
 
