git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@74 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/python/Makefile.in
+++ b/python/Makefile.in
@@ -170,7 +170,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 justnifferpythoncodedir = $(PYTHONCODEDIR)
-justnifferpythoncode_DATA = http_parser.py
+justnifferpythoncode_DATA = http_parser.py common.py
 bin_SCRIPTS = justniffer-grab-http-traffic
 CLEANFILES = $(bin_SCRIPTS)
 EXTRA_DIST = $(justnifferpythoncode_DATA)
