git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@75 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -117,6 +117,13 @@ PACKAGE_VERSION = @PACKAGE_VERSION@
 PATCH = @PATCH@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PCAP_LIB = @PCAP_LIB@
+PYTHON = @PYTHON@
+PYTHONCODEDIR = @PYTHONCODEDIR@
+PYTHONSUBDIR = @PYTHONSUBDIR@
+PYTHON_EXEC_PREFIX = @PYTHON_EXEC_PREFIX@
+PYTHON_PLATFORM = @PYTHON_PLATFORM@
+PYTHON_PREFIX = @PYTHON_PREFIX@
+PYTHON_VERSION = @PYTHON_VERSION@
 RANLIB = @RANLIB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
@@ -155,9 +162,13 @@ mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
 pdfdir = @pdfdir@
+pkgpyexecdir = @pkgpyexecdir@
+pkgpythondir = @pkgpythondir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+pyexecdir = @pyexecdir@
+pythondir = @pythondir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
