--- a/Makefile.in
+++ b/Makefile.in
@@ -187,7 +187,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = $(PYTHONSUBDIR) . src
+SUBDIRS = @subdirs@  src $(PYTHONSUBDIR)
 man8_MANS = justniffer.8
 all: all-recursive
 
