git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@90 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/include/config.h.in
+++ b/include/config.h.in
@@ -54,6 +54,9 @@
 /* Define to 1 if the system has the type `_Bool'. */
 #undef HAVE__BOOL
 
+/* justniffer version */
+#undef JUSTNIFFER_VERSION
+
 /* Name of package */
 #undef PACKAGE
 
