--- a/debian/rules
+++ b/debian/rules
@@ -48,7 +48,7 @@ clean:
 	rm -f build-stamp 
 
 	# Add here commands to clean up after the build process.
-	-$(MAKE) distclean
+	[ ! -f Makefile ] || $(MAKE) distclean
 	rm -f config.sub config.guess
 
 	dh_clean 
