--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@ dnl	Author: Oreste Notelli <oreste.notelli@plecno.com>
 dnl
 
 AC_PREREQ(2.60)
-AC_COPYRIGHT(2007-2009 (c) Plecno s.r.l)
+AC_COPYRIGHT(2007-2010 (c) Plecno s.r.l)
 AC_INIT(justniffer, [0.5.8], info@plecno.com)
 AC_DEFINE(JUSTNIFFER_VERSION, ["0.5.8"], [justniffer version])
 
@@ -24,7 +24,7 @@ dnl if test "$CXXFLAGS" = ""; then
 dnl CXXFLAGS="-Os -Wall"
 dnl fi
 
-LIBNIDS="libnids-1.21"
+LIBNIDS="libnids-1.21_patched"
 NIDS2_INCLUDE="-I ../lib/$LIBNIDS/src"
 NIDS2_LIB="-L../lib/$LIBNIDS/src -lnids2"
 PCAP_LIB="-lpcap"
@@ -91,16 +91,11 @@ AC_CHECK_FILE(lib/$LIBNIDS/README.original, ,
   then
     AC_MSG_ERROR(["cannot find tar"])
   fi
-  pushd .
-  cd lib
-  tar xvfz $LIBNIDS.tar.gz
-  patch -p0 < justniffer.patch
-  popd 
-  AC_CHECK_FILE(lib/$LIBNIDS/src/nids2.h, , AC_MSG_ERROR(["cannot patch libnids"]))
+  AC_CHECK_FILE(lib/$LIBNIDS/src/nids2.h, , AC_MSG_ERROR(["cannot find patched libnids"]))
   ]
 )
 
-AC_CONFIG_SUBDIRS([lib/libnids-1.21])
+AC_CONFIG_SUBDIRS([lib/libnids-1.21_patched])
 	
 AX_PYTHON
 PYTHONCODEDIR=${datarootdir}/justniffer/scripts
