--- a/python/justniffer-grab-http-traffic.in
+++ b/python/justniffer-grab-http-traffic.in
@@ -18,7 +18,7 @@ parser = OptionParser(version="%prog 0.1")
 parser.add_option("-d", "--directory", dest="directory",
                   help="MANDATORY: directory where to save files")
 parser.add_option("-p", "--packet-filter", dest="packet_filter",
-                  help="packet filter (tcpdump filter syntax), default ='port 80'", default="\"port 80\"")
+                  help="packet filter (tcpdump filter syntax), default ='port 80'", default="port 80")
 parser.add_option("-U", "--user", dest="user",
                   help="user to impersonate when saving files, cannot be root user")
 parser.add_option("-i", "--interface", dest="interface",
