--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,13 @@ Section: net
 Priority: optional
 Maintainer: Oreste Notelli <oreste.notelli@plecno.com>
 Build-Depends: patch, tar (>=1), debhelper (>= 5), autotools-dev, make(>=2), g++(>=3.3), libboost-iostreams-dev,  libboost-program-options-dev , libboost-regex-dev , libc6-dev (>=2), gcc (>= 3.3), libpcap0.8-dev 
-Standards-Version: 3.8
+Standards-Version: 3.9.2
 
 Package: justniffer
 Homepage: http://justniffer.sourceforge.net/
 Architecture: any
 Depends: ${shlibs:Depends}, python (>=2.6)
-Description: justniffer is a tcp packet sniffer. It can log network traffic in 
+Description: tcp packet sniffer. It can log network traffic in 
  a 'standard' (web server like) or in a customized way. It can also log response 
  times, useful for tracking network services performances (e.g. web server, 
  application server, etc.).
