--- a/python/justniffer-grab-http-traffic.in
+++ b/python/justniffer-grab-http-traffic.in
@@ -25,6 +25,12 @@ parser.add_option("-i", "--interface", dest="interface",
                   help="network interface to listen on (e.g. eth0, en1, etc.)")
 parser.add_option("-f", "--filecap", dest="filecap",
                   help="input file in 'tcpdump capture file format'")
+parser.add_option("-s", "--max-tcp-streams", dest="max_tcp_streams",
+                  help="Max concurrent tcp streams", type="int", default=65536)
+parser.add_option("-D", "--max-fragmented-ip", dest="max_fragmented_ip",
+                  help="Max concurrent fragmented ip host", type="int", default=65536)
+parser.add_option("-F", "--force-read-pcap", dest="force_read_pcap",
+                  help="force the reading of the pcap file ignoring the snaplen value. WARNING: could give unexpected results", action="store_true")
 parser.add_option("-P", "--parser_script", dest="parser_script", default =default_parser_script,
                   help="parser script to execute, default is 019dacaa-cf19-4082-b5a3-4b8d5b85efe2/http_parser.py")
 
@@ -71,6 +77,14 @@ check_user(options.user, options_to_pass)
 options_to_pass.append("-r")
 options_to_pass.append("-e")
 options_to_pass.append(options.parser_script+' -d "'+options.directory+'"')
+options_to_pass.append("-s"), options_to_pass.append(str(options.max_tcp_streams))
+options_to_pass.append("-d"), options_to_pass.append(str(options.max_fragmented_ip))
+options.force_read_pcap
+if options.force_read_pcap:
+    options_to_pass.append("-F")
 options_to_pass.insert(0, "justniffer")
+
 result = subprocess.call(options_to_pass)
+
+
 
