--- a/python/justniffer-grab-http-traffic.in
+++ b/python/justniffer-grab-http-traffic.in
@@ -85,6 +85,7 @@ if options.force_read_pcap:
 options_to_pass.insert(0, "justniffer")
 
 result = subprocess.call(options_to_pass)
+sys.exit(result)
 
 
 
