--- a/Makefile.in
+++ b/Makefile.in
@@ -189,11 +189,18 @@ PACKAGE_VERSION = @PACKAGE_VERSION@
 PATCH = @PATCH@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PCAP_LIB = @PCAP_LIB@
+PYTHON = @PYTHON@
 PYTHONCODEDIR = @PYTHONCODEDIR@
 PYTHONSUBDIR = @PYTHONSUBDIR@
 PYTHON_BIN = @PYTHON_BIN@
+PYTHON_CPPFLAGS = @PYTHON_CPPFLAGS@
+PYTHON_EXTRA_LDFLAGS = @PYTHON_EXTRA_LDFLAGS@
+PYTHON_EXTRA_LIBS = @PYTHON_EXTRA_LIBS@
 PYTHON_INCLUDE_DIR = @PYTHON_INCLUDE_DIR@
+PYTHON_LDFLAGS = @PYTHON_LDFLAGS@
 PYTHON_LIB = @PYTHON_LIB@
+PYTHON_SITE_PKG = @PYTHON_SITE_PKG@
+PYTHON_VERSION = @PYTHON_VERSION@
 RANLIB = @RANLIB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
