--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -47,13 +47,14 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_justniffer_OBJECTS = main.$(OBJEXT) formatter.$(OBJEXT) \
-	utilities.$(OBJEXT) regex.$(OBJEXT)
+	utilities.$(OBJEXT) regex.$(OBJEXT) test.$(OBJEXT)
 justniffer_OBJECTS = $(am_justniffer_OBJECTS)
 justniffer_LDADD = $(LDADD)
 am__DEPENDENCIES_1 =
 justniffer_DEPENDENCIES = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)/include
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -122,11 +123,18 @@ PACKAGE_VERSION = @PACKAGE_VERSION@
 PATCH = @PATCH@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PCAP_LIB = @PCAP_LIB@
+PYTHON = @PYTHON@
 PYTHONCODEDIR = @PYTHONCODEDIR@
 PYTHONSUBDIR = @PYTHONSUBDIR@
 PYTHON_BIN = @PYTHON_BIN@
+PYTHON_CPPFLAGS = @PYTHON_CPPFLAGS@
+PYTHON_EXTRA_LDFLAGS = @PYTHON_EXTRA_LDFLAGS@
+PYTHON_EXTRA_LIBS = @PYTHON_EXTRA_LIBS@
 PYTHON_INCLUDE_DIR = @PYTHON_INCLUDE_DIR@
+PYTHON_LDFLAGS = @PYTHON_LDFLAGS@
 PYTHON_LIB = @PYTHON_LIB@
+PYTHON_SITE_PKG = @PYTHON_SITE_PKG@
+PYTHON_VERSION = @PYTHON_VERSION@
 RANLIB = @RANLIB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
@@ -177,9 +185,9 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CPPFLAGS = $(NIDS2_INCLUDE) $(PCAP_INCLUDE) $(BOOST_CPPFLAGS) $(PYTHON_CFLAGS) -I ../include
+AM_CPPFLAGS = $(NIDS2_INCLUDE) $(PCAP_INCLUDE) $(BOOST_CPPFLAGS) $(PYTHON_CPPFLAGS) -I ../include
 LDADD = $(NIDS2_LIB) $(PCAP_LIB) $(BOOST_LDFLAGS) $(BOOST_REGEX_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_PYTHON_LIB)  $(PYTHON_LDFLAGS) 
-justniffer_SOURCES = main.cpp formatter.cpp utilities.cpp regex.cpp
+justniffer_SOURCES = main.cpp formatter.cpp utilities.cpp regex.cpp test.cpp
 all: all-am
 
 .SUFFIXES:
@@ -264,6 +272,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/formatter.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/regex.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/utilities.Po@am__quote@
 
 .cpp.o:
