--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -47,7 +47,7 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_justniffer_OBJECTS = main.$(OBJEXT) formatter.$(OBJEXT) \
-	utilities.$(OBJEXT) regex.$(OBJEXT) test.$(OBJEXT)
+	utilities.$(OBJEXT) regex.$(OBJEXT) python.$(OBJEXT)
 justniffer_OBJECTS = $(am_justniffer_OBJECTS)
 justniffer_LDADD = $(LDADD)
 am__DEPENDENCIES_1 =
@@ -187,7 +187,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CPPFLAGS = $(NIDS2_INCLUDE) $(PCAP_INCLUDE) $(BOOST_CPPFLAGS) $(PYTHON_CPPFLAGS) -I ../include
 LDADD = $(NIDS2_LIB) $(PCAP_LIB) $(BOOST_LDFLAGS) $(BOOST_REGEX_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_PYTHON_LIB)  $(PYTHON_LDFLAGS) 
-justniffer_SOURCES = main.cpp formatter.cpp utilities.cpp regex.cpp test.cpp
+justniffer_SOURCES = main.cpp formatter.cpp utilities.cpp regex.cpp python.cpp
 all: all-am
 
 .SUFFIXES:
@@ -271,8 +271,8 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/formatter.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/python.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/regex.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/utilities.Po@am__quote@
 
 .cpp.o:
