--- a/python/Makefile.in
+++ b/python/Makefile.in
@@ -108,6 +108,7 @@ ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 GREP = @GREP@
+HAVE_PYTHON_MODULES = @HAVE_PYTHON_MODULES@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
