--- a/configure.in
+++ b/configure.in
@@ -102,10 +102,9 @@ AC_CHECK_FILE(lib/$LIBNIDS/README.original, ,
 
 AC_CONFIG_SUBDIRS([lib/libnids-1.21_patched])
 	
-AX_PYTHON
 PYTHONCODEDIR=${datarootdir}/justniffer/scripts
 AC_SUBST(PYTHONCODEDIR)
-if test "$AX_PYTHON_ENABLED" == "enabled"; then
+if test "$ax_python_bin" != "no"; then
   PYTHONSUBDIR="python"
 fi
 
