--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,8 +2,12 @@ AM_CPPFLAGS= $(NIDS2_INCLUDE) $(PCAP_INCLUDE) $(BOOST_CPPFLAGS) $(PYTHON_CPPFLAG
 LDADD=$(NIDS2_LIB) $(PCAP_LIB) $(BOOST_LDFLAGS) $(BOOST_REGEX_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_PYTHON_LIB)  $(PYTHON_LDFLAGS) 
 
 bin_PROGRAMS = justniffer
-
 justniffer_SOURCES =  main.cpp formatter.cpp utilities.cpp regex.cpp 
+justniffer_CPPFLAGS = $(AM_CPPFLAGS)
+     
+lib_LTLIBRARIES = libjustniffer.la
+libjustniffer_la_SOURCES =  formatter.cpp utilities.cpp regex.cpp python.cpp
+libjustniffer_la_LIBADD= $(LDADD)
 
 if HAVE_PYTHON_MODULES
 justniffer_SOURCES+= python.cpp 
