--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
-AM_CPPFLAGS= $(NIDS2_INCLUDE) $(PCAP_INCLUDE) $(BOOST_CPPFLAGS) $(PYTHON_CPPFLAGS) -I ../include
-LDADD=$(NIDS2_LIB) $(PCAP_LIB) $(BOOST_LDFLAGS) $(BOOST_REGEX_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_PYTHON_LIB)  $(PYTHON_LDFLAGS) 
-
+ACLOCAL_AMFLAGS= -I m4
+AM_CPPFLAGS= $(NIDS2_INCLUDE) $(PCAP_INCLUDE) $(BOOST_CPPFLAGS) -I $(PYTHON_INCLUDE_DIR) -I ../include
+LDADD=$(NIDS2_LIB) $(PCAP_LIB) $(BOOST_LDFLAGS) $(BOOST_REGEX_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_PYTHON_LDFLAGS) $(BOOST_REGEX_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_PYTHON_LIBS)  -l$(PYTHON_LIB) 
 bin_PROGRAMS = justniffer
-justniffer_SOURCES =  main.cpp formatter.cpp utilities.cpp regex.cpp prog_read_file.cpp
+justniffer_SOURCES =  $(PYTHON_MODULES) main.cpp formatter.cpp utilities.cpp regex.cpp prog_read_file.cpp
 justniffer_CPPFLAGS = $(AM_CPPFLAGS)
      
 #lib_LTLIBRARIES = libjustniffer.la
@@ -10,7 +10,7 @@ justniffer_CPPFLAGS = $(AM_CPPFLAGS)
 #libjustniffer_la_LIBADD= $(LDADD) 
 #libjustniffer_la_CPPFLAGS = $(AM_CPPFLAGS)
 
-if HAVE_PYTHON_MODULES
-justniffer_SOURCES+= python.cpp 
-endif
+#echo $(HAVE_PYTHON_MODULES)
+#justniffer_SOURCES+= python.cpp 
+#endif
  
