--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ config.log
 config.status
 libtool
 lib/libnids-1.21_patched/configure.lineno
+include/config.h
+python/justniffer-grab-http-traffic
