--- a/justniffer.8.in
+++ b/justniffer.8.in
@@ -1,4 +1,4 @@
-.TH JUSTNIFFER 8 "March 10, 2016" "" ""
+.TH JUSTNIFFER 8 "{{date.month_name}} {{date.day}}, {{date.year}}" "" ""
 .SH NAME
 \fBjustniffer \fP- tcp flow sniffer
 \fB
@@ -944,4 +944,4 @@ justniffer \fB-f\fP ./test.cap
 .SH AUTHOR
 Oreste Notelli <oreste.notelli@plecno.com>
 .SH COPYRIGHT
-Copyright (c) 2007-2016 Plecno s.r.l.
+Copyright (c) 2007-{{date.year}} Plecno s.r.l.
