--- a/configure.ac.in
+++ b/configure.ac.in
@@ -15,6 +15,7 @@ AC_DEFINE(JUSTNIFFER_VERSION, ["{{version}}"], [justniffer version])
 AC_DEFINE(JUSTNIFFER_YEAR, ["{{date.year}}"], [justniffer year])
 AC_CONFIG_MACRO_DIR([included])
 AM_INIT_AUTOMAKE
+AM_MAINTAINER_MODE([disable])
 AC_DEFINE([HAVE_LIB_PCAP], [], [has not libcap])
 AM_CONFIG_HEADER(include/config.h)
 
