--- a/configure.ac
+++ b/configure.ac
@@ -13,14 +13,14 @@ AC_COPYRIGHT(2007-2016 (c) Plecno s.r.l)
 AC_INIT(justniffer, [0.5.15], info@plecno.com)
 AC_DEFINE(JUSTNIFFER_VERSION, ["0.5.15"], [justniffer version])
 AC_DEFINE(JUSTNIFFER_YEAR, ["2016"], [justniffer year])
-AC_CONFIG_MACRO_DIR([included])
+#AC_CONFIG_MACRO_DIR([included])
 AM_INIT_AUTOMAKE
 AM_MAINTAINER_MODE([disable])
 AC_DEFINE([HAVE_LIB_PCAP], [], [has not libcap])
 AM_CONFIG_HEADER(include/config.h)
 
 
-AM_INIT_AUTOMAKE([-Wall -Werror])
+#AM_INIT_AUTOMAKE([-Wall -Werror])
 
 dnl if test "$CXXFLAGS" = ""; then
 dnl CXXFLAGS="-Os -Wall"
