--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,7 @@
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = @subdirs@  src $(PYTHONSUBDIR)
 man8_MANS = justniffer.8
+
+
+bashcompletiondir = $(BASH_COMPLETION_DIR)
+dist_bashcompletion_DATA = bash-completion/justniffer
